[gd_scene load_steps=6 format=3 uid="uid://1h5hbaf8nbqd"]

[ext_resource type="Script" path="res://scripts/pausemenu.gd" id="1_maev8"]
[ext_resource type="FontFile" uid="uid://hdytp8muc17q" path="res://assets/font/Kenney Bold.ttf" id="2_pbw4m"]
[ext_resource type="StyleBox" uid="uid://bucef3k82gtbn" path="res://assets/style/normal_style_box_texture.tres" id="3_xedp0"]
[ext_resource type="StyleBox" uid="uid://bhtm6pj85tg3p" path="res://assets/style/hover_style_box_texture.tres" id="4_gvde2"]
[ext_resource type="StyleBox" uid="uid://dy2su535xmggd" path="res://assets/style/pressed_style_box_texture.tres" id="5_07c6e"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_maev8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0338533, 0.0338533, 0.0338533, 0.709804)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -100.0
offset_right = 202.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(202, 172)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pbw4m")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_xedp0")
theme_override_styles/hover = ExtResource("4_gvde2")
theme_override_styles/pressed = ExtResource("5_07c6e")
text = "RESUME"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pbw4m")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_xedp0")
theme_override_styles/hover = ExtResource("4_gvde2")
theme_override_styles/pressed = ExtResource("5_07c6e")
text = "SETTINGS"

[node name="Save & Quit" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pbw4m")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_xedp0")
theme_override_styles/hover = ExtResource("4_gvde2")
theme_override_styles/pressed = ExtResource("5_07c6e")
text = "QUIT "

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save & Quit" to="." method="_on_save__quit_pressed"]
